# django-blog-project

./: .dockerignore  .flake8  .gitignore  .isort.cfg  .travis.yml  Pipfile  README.md  external-mainland.yml  fabfile.py  get-poetry.py  local.yml  manage.py  mkdocs.yml  production-mainland.yml  production.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.envs/.local/: .django  .postgres
.github/workflows/: ci.yml  continuous.yml
blogproject/: conftest.py
blogproject/alerts/: admin.py  apps.py  models.py
blogproject/alerts/migrations/: 0001_initial.py  0002_alert_scopes.py  0003_auto_20210721_2028.py
blogproject/blog/: __init__.py  admin.py  apps.py  factories.py  feeds.py  managers.py  models.py  search_indexes.py  sitemaps.py  urls.py  utils.py  views.py  whoosh_cn_backend.py
blogproject/blog/migrations/: 0001_initial.py  0002_auto_20190918_1409.py  0006_post_tags.py  (+4 more)
blogproject/comments/: __init__.py  admin.py  apps.py  factories.py  forms.py  models.py  moderation.py  serializers.py  urls.py  utils.py  views.py  widgets.py
blogproject/core/: abstracts.py  models.py  storage.py  utils.py  views.py
blogproject/courses/: admin.py  apps.py  managers.py  models.py  search_indexes.py  urls.py  views.py
blogproject/favorites/: admin.py  apps.py  models.py  urls.py  views.py
blogproject/friendlinks/: admin.py  apps.py  models.py
blogproject/functional_tests/: tests.py
blogproject/newsletters/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
blogproject/notify/: context_processors.py  factories.py  tests.py  urls.py  views.py
blogproject/tags/: admin.py  apps.py  models.py
blogproject/taskapp/: celery.py  tasks.py
blogproject/templates/: 503.html  base.html  sidebar_mobile_base.html
blogproject/users/: adapter.py  admin.py  factories.py  models.py  serializers.py
blogproject/webtools/: apps.py  forms.py  urls.py  views.py
compose/local/: Dockerfile
config/: asgi.py  urls.py  wsgi.py
config/settings/: common.py  local.py  production.py  test.py
devops/ansible/: hosts.yml  site.yml
docs/: category.md  configuration.md  course.md  friendlink.md  index.md  overview.md  post.md  tag.md
frontend/: .eslintrc.js  .prettierrc  README.md  babel.config.js  manifest-test.json  package-lock.json  package.json  tsconfig.json  vue.config.js  webpack-stats.json  webpack-test-stats.json  webpack.base.config.js  webpack.dev.config.js  webpack.prod.config.js
frontend/src/: App.vue  Comment.vue  CommentApp.vue  api.js  axiosService.js  index.js  main.ts  shims-vue.d.ts  styles.scss
frontend_old/: package.json  postcss.config.js  webpack.base.config.js  webpack.dev.config.js
frontend_old/src/: api.js  axiosService.js  index.js
(+199 files in other folders)
